# dotfiles

./: Cargo.toml  README.md
.github/workflows/: cicd.yml  release.yml
src/: main.rs
